--- a/BrazilVaccines.Rmd
+++ b/BrazilVaccines.Rmd
@@ -40,12 +40,11 @@ library(reshape)
 ```
 
 In this study, we examine how the number of vaccines adminstered in Brazil has changed as a result of the COVID19 pandemic.
-<br><br><br><br>
 
-Our data comes from DATASUS which tabulates the number of vaccines distributed by state for each month.  Here we utilize data from 2015 thorugh 2020.
-<br><br><br><br>
+Our data comes from DATASUS which tabulates the number of vaccines distributed by state for each month.  Here we utilize data from 2015 thorugh 2020.  Annual population estimates were obtained for 2015 thorugh 2020 through IBGE.
 
-```{r, echo=FALSE, warning=FALSE,fig.cap="Total vacccines adminstered across Brazil"}
+Here we can see the total number of vaccinations nationally over time
+```{r, echo=FALSE, warning=FALSE}
 df<-data.frame(imunizacoes_2019)
 
 # Most basic bubble plot
@@ -60,8 +59,9 @@ ggplot(df, aes(x=Date, y=Total.vaccines)) +
   theme(axis.text.x=element_text(angle=60, hjust=1)) +
   scale_x_date(labels = date_format("%b-%Y"), date_breaks = "3 month",limit=c(as.Date("2015-01-01"),as.Date("2020-02-11")))
 ```
-<br><br><br><br>
 
+<br><br><br><br>
+We can compare the raw number of vaccinations across states
 ```{r, echo=FALSE, warning=FALSE}
 dataforlong<-df[,c(1,3:7)]
 
@@ -87,7 +87,10 @@ ggplot(dflong, aes(x=Month, y=value, group=State, color=State)) +
 ```
 <br><br><br><br>
 
-Here we use an I chart followed by a moving range (MR) chart
+
+In order to identify potential temporal outliers, we utlize control charts in order to study how the number of vaccines changes over time.  We utilize the rate of vaccine adminstration per 1000 persons.
+
+Here we use an I chart followed by a moving range (MR) chart.  This chart does not take into account potential differences across states and usually the national aggregaetes only.
 
 ```{r, echo=FALSE, warning=FALSE}
 df$Total2<-df$Total.vaccines/(df$Total.pop/1000)
@@ -101,7 +104,11 @@ nationaltotal<-qic(Total2,
     xlab  = '',
     nint=30,
      x.format = "%b-%Y", main  = "Total Vaccinations Brazil: 2015-2020",sub ="")
+```
 
+We can also use march 2020 as a breakpoint to compare trends before and after covid19. We use Feb 2020 which is recognized as the start of the pandemic in Brazil
+
+```{r, echo=FALSE, warning=FALSE}
 nationaltotal<-qic(Total2,
     x     = Date,
     data  = df,
@@ -109,7 +116,7 @@ nationaltotal<-qic(Total2,
     ylab  = 'Distributed Vaccines (per 1000 population)',
     xlab  = '',
     nint=30,
-     x.format = "%b-%Y", main  = "Total Vaccinations Brazil: 2015-2020",sub ="Break at March 2020", breaks=63)
+     x.format = "%b-%Y", main  = "Total Vaccinations Brazil: 2015-2020",sub ="Break at March 2020", breaks=62)
 
 qic(df$Total2,
     chart = 'mr',
@@ -117,12 +124,12 @@ qic(df$Total2,
     ylab  = 'Vaccines (Per 1000 pop)',
     xlab  = 'Month')
 ```
+
 <br><br><br><br>
 Below we use an xbar chart in order to incorperate vaccine rates per 1000 people by state.  
 <br><br><br><br>
 
 ```{r, echo=FALSE, warning=FALSE}
-
 df$Northadj<-df$North.vaccines/(df$North.pop/1000)
 df$Northeastadj<-df$Northeast.vaccines/(df$Northeast.pop/1000)
 df$Southeastadj<-df$Southeast.vaccines/(df$Southeast.pop/1000)
@@ -148,7 +155,10 @@ qic(value,
     main  = 'Average vaccination rate (Xbar chart; across states)',
     ylab  = 'Vaccines rate (per 1000 people)',
     xlab  = 'Month',x.format = "%b-%Y")
+```
 
+Again we use Feb 2020 as a break point which is recognized as the start of the pandemic in Brazil
+```{r, echo=FALSE, warning=FALSE}
 qic(value, 
     x     = Month, 
     data  = dataforlong2,
@@ -156,7 +166,7 @@ qic(value,
     main  = 'Average vaccination rate (Xbar chart; across states)',
     ylab  = 'Vaccines rate (per 1000 people)',
      sub = "break at March 2020",
-    xlab  = 'Month',breaks = 63,x.format = "%b-%Y")
+    xlab  = 'Month',breaks = 62,x.format = "%b-%Y")
 
 ```
 
